# tangent

./: .cursorignore  .cursorrules  .gitignore  README.md  codebase_snapshot.md  main.py  pyproject.toml  setup.cfg  tangent-structured-outputs.md  tangent_py_package.md  test.py  test_instructions.py  tracker-checklist.md
config/tools/: __init__.py  applescript_tool.py  database_tool.py  terminal_tool.py
docs/: creating_agents.md  embeddings.md  function_calls.md  memoryv2.md  tangent-browser.md  tangent-imports.md  tangent-structured-outputs.md  triage_template.md  types_index.md
docs/ToDo/: tangent-browser.md
docs/openai/: openai-embeddings-jan-2025.md  openai-vision-jan-2025.md  whisper-jan-2024.md
document_storage/: 0e4f6976-1ce1-46f9-9ae0-64ab5a27bbc0.json  a5048f2c-7399-47c6-b721-7e93affa9648.json
example/: agent.py  browser_agent.py
example/tools/: calendar.py  current_time.py  image_creator.py  mac_calendar.py  reminders.py  semantic_search.py  terminal_execution.py  web_search.py
example/utils/: vector_db.py
examples/: applescript_agent.py  basic_agent.py  embedding_agent.py  research_agent.py  tool_agent.py  triage_agent.py  websearch_agent.py
instructions/: ChatBot.md  SearchBot.md
my-docs/: tangent_python_library.md
public/: tangent-browser.md
tangent/: __init__.py  core.py  embeddings.py  types.py  util.py
tangent/browser/: __init__.py
tangent/helpers/: __init__.py  post_install.py
tangent/memory/: __init__.py
tangent/repl/: __init__.py  repl.py
tangent/tools/: __init__.py  browser_agent.py  (+1 more)
test_documents/: ai_history.json
(+40 files in other folders)
