[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tangent"
version = "0.1.2"
authors = [
    {name = "SlyyCooper"}
]
description = "A lightweight, stateless multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "openai>=1.33.0",
    "pytest",
    "requests",
    "tqdm",
    "pre-commit",
    "instructor",
    "qdrant-client>=1.7.0"
]

[tool.setuptools]
packages = ["tangent", "tangent.repl", "tangent.tools", "tangent.triage"]

[tool.autopep8]
max_line_length = 120
ignore = ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3